more monthly sentiment data - 2023-08-01

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -397,87 +397,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ticker': 'AAPL', 'Time Published': '20240401T034222', 'Overall Sentiment Score': 0.202624, 'Ticker Sentiment Score': '0.415683'}\n",
-      "{'Ticker': 'NVDA', 'Time Published': '20240401T040157', 'Overall Sentiment Score': 0.329593, 'Ticker Sentiment Score': '0.353362'}\n",
-      "{'Ticker': 'AMZN', 'Time Published': '20240401T070500', 'Overall Sentiment Score': 0.298364, 'Ticker Sentiment Score': '0.314247'}\n",
-      "{'Ticker': 'GOOG', 'Time Published': '20240401T001500', 'Overall Sentiment Score': 0.363839, 'Ticker Sentiment Score': '0.180257'}\n",
-      "{'Ticker': 'LLY', 'Time Published': '20240401T083000', 'Overall Sentiment Score': 0.24052, 'Ticker Sentiment Score': '0.180009'}\n",
-      "{'Ticker': 'XOM', 'Time Published': '20240401T053000', 'Overall Sentiment Score': 0.219839, 'Ticker Sentiment Score': '-0.05916'}\n",
-      "{'Ticker': 'UNH', 'Time Published': '20240401T063000', 'Overall Sentiment Score': 0.091917, 'Ticker Sentiment Score': '0.0'}\n",
-      "{'Ticker': 'PG', 'Time Published': '20240402T134013', 'Overall Sentiment Score': 0.262975, 'Ticker Sentiment Score': '0.158998'}\n",
-      "{'Ticker': 'JNJ', 'Time Published': '20240401T103000', 'Overall Sentiment Score': 0.151857, 'Ticker Sentiment Score': '0.043599'}\n",
-      "{'Ticker': 'HD', 'Time Published': '20240401T162935', 'Overall Sentiment Score': 0.393967, 'Ticker Sentiment Score': '0.58477'}\n",
-      "{'Ticker': 'COST', 'Time Published': '20240401T130000', 'Overall Sentiment Score': 0.297572, 'Ticker Sentiment Score': '0.06688'}\n",
-      "{'Ticker': 'CVX', 'Time Published': '20240401T072700', 'Overall Sentiment Score': 0.13064, 'Ticker Sentiment Score': '0.222799'}\n",
-      "{'Ticker': 'BAC', 'Time Published': '20240401T062447', 'Overall Sentiment Score': 0.330155, 'Ticker Sentiment Score': '0.203533'}\n",
-      "{'Ticker': 'WMT', 'Time Published': '20240401T111700', 'Overall Sentiment Score': 0.30396, 'Ticker Sentiment Score': '0.317235'}\n",
-      "{'Ticker': 'AMD', 'Time Published': '20240401T084100', 'Overall Sentiment Score': 0.215754, 'Ticker Sentiment Score': '0.028643'}\n",
-      "{'Ticker': 'NFLX', 'Time Published': '20240401T040100', 'Overall Sentiment Score': 0.040944, 'Ticker Sentiment Score': '0.042316'}\n",
-      "{'Ticker': 'PEP', 'Time Published': '20240401T080816', 'Overall Sentiment Score': 0.133015, 'Ticker Sentiment Score': '0.269356'}\n",
-      "{'Ticker': 'KO', 'Time Published': '20240401T020035', 'Overall Sentiment Score': 0.38267, 'Ticker Sentiment Score': '0.171001'}\n",
-      "{'Ticker': 'TMO', 'Time Published': '20240401T143105', 'Overall Sentiment Score': 0.238974, 'Ticker Sentiment Score': '0.383648'}\n",
-      "{'Ticker': 'ADBE', 'Time Published': '20240401T083353', 'Overall Sentiment Score': 0.191191, 'Ticker Sentiment Score': '0.320369'}\n",
-      "{'Ticker': 'WFC', 'Time Published': '20240401T121114', 'Overall Sentiment Score': 0.173474, 'Ticker Sentiment Score': '0.0'}\n",
-      "{'Ticker': 'LIN', 'Time Published': '20240401T111700', 'Overall Sentiment Score': 0.30396, 'Ticker Sentiment Score': '0.317235'}\n",
-      "{'Ticker': 'DIS', 'Time Published': '20240401T090001', 'Overall Sentiment Score': 0.161216, 'Ticker Sentiment Score': '0.007523'}\n",
-      "{'Ticker': 'MCD', 'Time Published': '20240401T130000', 'Overall Sentiment Score': 0.34066, 'Ticker Sentiment Score': '0.015212'}\n",
-      "{'Ticker': 'CSCO', 'Time Published': '20240401T140000', 'Overall Sentiment Score': 0.385715, 'Ticker Sentiment Score': '0.0'}\n",
-      "{'Ticker': 'ACN', 'Time Published': '20240401T120000', 'Overall Sentiment Score': 0.300131, 'Ticker Sentiment Score': '0.175158'}\n",
-      "{'Ticker': 'ORCL', 'Time Published': '20240401T120200', 'Overall Sentiment Score': 0.384193, 'Ticker Sentiment Score': '0.031572'}\n",
-      "{'Ticker': 'ABT', 'Time Published': '20240401T083000', 'Overall Sentiment Score': 0.24052, 'Ticker Sentiment Score': '0.180009'}\n",
-      "{'Ticker': 'QCOM', 'Time Published': '20240401T023700', 'Overall Sentiment Score': 0.30795, 'Ticker Sentiment Score': '-0.012995'}\n",
-      "{'Ticker': 'INTU', 'Time Published': '20240401T134200', 'Overall Sentiment Score': 0.364932, 'Ticker Sentiment Score': '0.159959'}\n",
-      "{'Ticker': 'GE', 'Time Published': '20240401T073255', 'Overall Sentiment Score': 0.519886, 'Ticker Sentiment Score': '0.33568'}\n",
-      "{'Ticker': 'CAT', 'Time Published': '20240401T161014', 'Overall Sentiment Score': 0.323646, 'Ticker Sentiment Score': '0.459263'}\n",
-      "{'Ticker': 'AMAT', 'Time Published': '20240401T130000', 'Overall Sentiment Score': 0.149621, 'Ticker Sentiment Score': '0.051346'}\n",
-      "{'Ticker': 'VZ', 'Time Published': '20240401T120500', 'Overall Sentiment Score': 0.10003, 'Ticker Sentiment Score': '-0.043393'}\n",
-      "{'Ticker': 'DHR', 'Time Published': '20240402T133600', 'Overall Sentiment Score': 0.220528, 'Ticker Sentiment Score': '0.224377'}\n",
-      "{'Ticker': 'TXN', 'Time Published': '20240401T130011', 'Overall Sentiment Score': 0.22842, 'Ticker Sentiment Score': '0.159493'}\n",
-      "{'Ticker': 'COP', 'Time Published': '20240401T113423', 'Overall Sentiment Score': 0.246474, 'Ticker Sentiment Score': '0.404494'}\n",
-      "{'Ticker': 'IBM', 'Time Published': '20240401T153000', 'Overall Sentiment Score': 0.408797, 'Ticker Sentiment Score': '0.26561'}\n",
-      "{'Ticker': 'UNP', 'Time Published': '20240402T134115', 'Overall Sentiment Score': -0.092007, 'Ticker Sentiment Score': '-0.04655'}\n",
-      "{'Ticker': 'AMGN', 'Time Published': '20240401T082400', 'Overall Sentiment Score': 0.249637, 'Ticker Sentiment Score': '0.058925'}\n",
-      "{'Ticker': 'PFE', 'Time Published': '20240401T090500', 'Overall Sentiment Score': 0.190777, 'Ticker Sentiment Score': '0.115944'}\n",
-      "{'Ticker': 'GS', 'Time Published': '20240401T062442', 'Overall Sentiment Score': 0.277904, 'Ticker Sentiment Score': '0.148393'}\n",
-      "{'Ticker': 'NEE', 'Time Published': '20240401T053000', 'Overall Sentiment Score': 0.219839, 'Ticker Sentiment Score': '-0.05916'}\n",
-      "{'Ticker': 'INTC', 'Time Published': '20240401T142800', 'Overall Sentiment Score': 0.249418, 'Ticker Sentiment Score': '0.132691'}\n",
-      "{'Ticker': 'AXP', 'Time Published': '20240401T101500', 'Overall Sentiment Score': 0.316776, 'Ticker Sentiment Score': '0.074255'}\n",
-      "{'Ticker': 'RTX', 'Time Published': '20240402T105600', 'Overall Sentiment Score': 0.21596, 'Ticker Sentiment Score': '-0.006694'}\n",
-      "{'Ticker': 'SPGI', 'Time Published': '20240401T035602', 'Overall Sentiment Score': 0.063325, 'Ticker Sentiment Score': '0.0'}\n",
-      "{'Ticker': 'ISRG', 'Time Published': '20240401T083000', 'Overall Sentiment Score': 0.24052, 'Ticker Sentiment Score': '0.180009'}\n",
-      "{'Ticker': 'ETN', 'Time Published': '20240401T113000', 'Overall Sentiment Score': 0.44993, 'Ticker Sentiment Score': '0.644435'}\n",
-      "{'Ticker': 'HON', 'Time Published': '20240402T145000', 'Overall Sentiment Score': 0.231036, 'Ticker Sentiment Score': '-0.050303'}\n",
-      "{'Ticker': 'MU', 'Time Published': '20240401T023700', 'Overall Sentiment Score': 0.30795, 'Ticker Sentiment Score': '-0.012995'}\n",
-      "{'Ticker': 'ELV', 'Time Published': '20240401T203030', 'Overall Sentiment Score': 0.238974, 'Ticker Sentiment Score': '0.384186'}\n",
-      "{'Ticker': 'BKNG', 'Time Published': '20240401T164542', 'Overall Sentiment Score': 0.159554, 'Ticker Sentiment Score': '0.192587'}\n",
-      "{'Ticker': 'PGR', 'Time Published': '20240401T122300', 'Overall Sentiment Score': 0.196818, 'Ticker Sentiment Score': '0.150506'}\n",
-      "{'Ticker': 'LRCX', 'Time Published': '20240401T130000', 'Overall Sentiment Score': 0.149621, 'Ticker Sentiment Score': '0.051346'}\n",
-      "{'Ticker': 'T', 'Time Published': '20240401T024857', 'Overall Sentiment Score': 0.043355, 'Ticker Sentiment Score': '-0.075945'}\n",
-      "{'Ticker': 'C', 'Time Published': '20240401T023014', 'Overall Sentiment Score': 0.273615, 'Ticker Sentiment Score': '0.116724'}\n",
-      "{'Ticker': 'MS', 'Time Published': '20240401T032703', 'Overall Sentiment Score': 0.298751, 'Ticker Sentiment Score': '0.168515'}\n",
-      "{'Ticker': 'NKE', 'Time Published': '20240401T071000', 'Overall Sentiment Score': 0.049187, 'Ticker Sentiment Score': '-0.064818'}\n",
-      "{'Ticker': 'SYK', 'Time Published': '20240401T121500', 'Overall Sentiment Score': 0.226527, 'Ticker Sentiment Score': '0.043915'}\n",
-      "{'Ticker': 'SCHW', 'Time Published': '20240401T062443', 'Overall Sentiment Score': 0.278393, 'Ticker Sentiment Score': '0.28211'}\n",
-      "{'Ticker': 'TJX', 'Time Published': '20240401T162244', 'Overall Sentiment Score': 0.171697, 'Ticker Sentiment Score': '0.175973'}\n",
-      "{'Ticker': 'BSX', 'Time Published': '20240402T123000', 'Overall Sentiment Score': 0.221399, 'Ticker Sentiment Score': '0.0'}\n",
-      "{'Ticker': 'UPS', 'Time Published': '20240401T081100', 'Overall Sentiment Score': 0.126186, 'Ticker Sentiment Score': '0.215768'}\n",
-      "{'Ticker': 'BLK', 'Time Published': '20240401T052749', 'Overall Sentiment Score': 0.197849, 'Ticker Sentiment Score': '0.120426'}\n",
-      "{'Ticker': 'MDT', 'Time Published': '20240401T121500', 'Overall Sentiment Score': 0.226527, 'Ticker Sentiment Score': '0.043915'}\n",
-      "{'Ticker': 'CI', 'Time Published': '20240401T153600', 'Overall Sentiment Score': 0.307135, 'Ticker Sentiment Score': '0.188606'}\n",
-      "{'Ticker': 'DE', 'Time Published': '20240401T111700', 'Overall Sentiment Score': 0.30396, 'Ticker Sentiment Score': '0.317235'}\n",
-      "{'Ticker': 'VRTX', 'Time Published': '20240401T083000', 'Overall Sentiment Score': 0.24052, 'Ticker Sentiment Score': '0.180009'}\n",
-      "{'Ticker': 'ADI', 'Time Published': '20240404T203106', 'Overall Sentiment Score': 0.182919, 'Ticker Sentiment Score': '0.294574'}\n",
-      "{'Ticker': 'SBUX', 'Time Published': '20240401T092100', 'Overall Sentiment Score': 0.132608, 'Ticker Sentiment Score': '0.098788'}\n",
-      "{'Ticker': 'ADP', 'Time Published': '20240402T214600', 'Overall Sentiment Score': 0.126128, 'Ticker Sentiment Score': '0.067584'}\n",
-      "{'Ticker': 'CB', 'Time Published': '20240402T074500', 'Overall Sentiment Score': 0.430134, 'Ticker Sentiment Score': '0.552824'}\n",
-      "{'Ticker': 'LMT', 'Time Published': '20240401T140100', 'Overall Sentiment Score': 0.34309, 'Ticker Sentiment Score': '0.180764'}\n"
+      "{'Ticker': 'AAPL', 'Time Published': '20230801T020647', 'Overall Sentiment Score': 0.042909, 'Ticker Sentiment Score': '0.063009'}\n",
+      "{'Ticker': 'NVDA', 'Time Published': '20230801T023032', 'Overall Sentiment Score': 0.212741, 'Ticker Sentiment Score': '0.0'}\n",
+      "{'Ticker': 'AMZN', 'Time Published': '20230801T090600', 'Overall Sentiment Score': 0.148777, 'Ticker Sentiment Score': '0.106258'}\n",
+      "{'Ticker': 'GOOG', 'Time Published': '20230801T003000', 'Overall Sentiment Score': 0.17716, 'Ticker Sentiment Score': '0.023229'}\n",
+      "{'Ticker': 'LLY', 'Time Published': '20230801T114512', 'Overall Sentiment Score': 0.143717, 'Ticker Sentiment Score': '0.0'}\n",
+      "{'Ticker': 'XOM', 'Time Published': '20230801T034747', 'Overall Sentiment Score': -0.179864, 'Ticker Sentiment Score': '0.006056'}\n",
+      "{'Ticker': 'UNH', 'Time Published': '20230801T184607', 'Overall Sentiment Score': 0.130007, 'Ticker Sentiment Score': '-0.128528'}\n",
+      "{'Ticker': 'PG', 'Time Published': '20230801T094046', 'Overall Sentiment Score': 0.197248, 'Ticker Sentiment Score': '0.088306'}\n",
+      "{'Ticker': 'JNJ', 'Time Published': '20230801T004244', 'Overall Sentiment Score': 0.214721, 'Ticker Sentiment Score': '0.281571'}\n",
+      "{'Ticker': 'HD', 'Time Published': '20230801T021527', 'Overall Sentiment Score': 0.252546, 'Ticker Sentiment Score': '0.0'}\n",
+      "{'Ticker': 'COST', 'Time Published': '20230801T110000', 'Overall Sentiment Score': 0.078375, 'Ticker Sentiment Score': '0.068193'}\n",
+      "{'Ticker': 'CVX', 'Time Published': '20230801T112200', 'Overall Sentiment Score': 0.051269, 'Ticker Sentiment Score': '0.108468'}\n",
+      "{'Ticker': 'BAC', 'Time Published': '20230801T023032', 'Overall Sentiment Score': 0.212741, 'Ticker Sentiment Score': '0.0'}\n",
+      "{'Ticker': 'WMT', 'Time Published': '20230801T010146', 'Overall Sentiment Score': 0.151115, 'Ticker Sentiment Score': '0.054918'}\n"
      ]
     }
    ],
@@ -495,7 +435,7 @@
     "time_from = '20100101T0000'\n",
     "\n",
     "# Get the current time in YYYYMMDDTHHMM format\n",
-    "time_to = '20240401T0000'\n",
+    "time_to = '20230801T0000'\n",
     "\n",
     "# Function to fetch news sentiment data for a ticker within a time range\n",
     "def fetch_news_sentiment(ticker, start_time, end_time):\n",
@@ -528,7 +468,6 @@
     "# Generate start and end times for the first day of each month\n",
     "time_ranges = generate_monthly_time_ranges(time_from, time_to)\n",
     "\n",
-    "# Fetch news sentiment data for each ticker and time range\n",
     "# Fetch news sentiment data for each ticker and time range\n",
     "output_file = \"data/sentiment_monthly_data.csv\"\n",
     "for start_time, end_time in time_ranges:\n",
