--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -694,9 +694,9 @@
     "def build_model(num_features, num_time_steps, output_shape):\n",
     "    model = Sequential()\n",
     "    # Add a LSTM layer only if your data is sequenced; otherwise start with Dense\n",
-    "    model.add(LSTM(64, input_shape=(num_time_steps, num_features), return_sequences=True))\n",
+    "    model.add(LSTM(64, activation = 'relu', input_shape=(num_time_steps, num_features), return_sequences=True))\n",
     "    model.add(Dropout(0.2))\n",
-    "    model.add(LSTM(32, return_sequences=False))\n",
+    "    model.add(LSTM(32, activation = 'relu', return_sequences=False))\n",
     "    model.add(Dense(output_shape, activation='sigmoid'))  # Sigmoid or softmax based on your needs\n",
     "    model.compile(optimizer='adam', loss='mse')\n",
     "    return model\n",
@@ -1532,7 +1532,114 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB\n",
+    "import numpy as np\n",
+    "import pyepo\n",
+    "from pyepo.model.grb import optGrbModel\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "m = targets_val.shape[1] # total number of assets\n",
+    "cov = np.cov(np.random.randn(10, m), rowvar=False) # covariance matrix\n",
+    "optmodel = pyepo.model.grb.portfolioModel(m, cov) # build model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "from torch import nn\n",
+    "import torch \n",
+    "\n",
+    "def build_model(num_features, num_time_steps, output_shape):\n",
+    "    model = Sequential()\n",
+    "    # Add a LSTM layer only if your data is sequenced; otherwise start with Dense\n",
+    "    model.add(LSTM(64, activation = 'relu', input_shape=(num_time_steps, num_features), return_sequences=True))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(LSTM(32, activation = 'relu', return_sequences=False))\n",
+    "    model.add(Dense(output_shape, activation='sigmoid'))  # Sigmoid or softmax based on your needs\n",
+    "    return model\n",
+    "\n",
+    "# Example usage assuming you've correctly shaped your data\n",
+    "num_features = features_train.shape[2]  # number of features per timestep\n",
+    "num_time_steps = features_train.shape[1]  # number of timesteps per sample\n",
+    "output_shape = targets_train.shape[1]  # assuming this is a regression task or multi-label classification\n",
+    "lstm = build_model(num_features, num_time_steps,output_shape)\n",
+    "\n",
+    "spop = pyepo.func.SPOPlus(optmodel, processes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "# train model\n",
+    "def trainModel(reg, loss_func, method_name, num_epochs=20, lr=1e-2):\n",
+    "    # set adam optimizer\n",
+    "    optimizer = torch.optim.Adam(reg.parameters(), lr=lr)\n",
+    "    # train mode\n",
+    "    reg.train()\n",
+    "    # init log\n",
+    "    train_loss_log = []\n",
+    "    loss_log_regret = [pyepo.metric.regret(reg, optmodel, val_loader)] #use val_loader\n",
+    "    # init elpased time\n",
+    "    elapsed = 0\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # start timing\n",
+    "        tick = time.time()\n",
+    "        # load data\n",
+    "        train_loss = 0\n",
+    "        for i, data in enumerate(train_loader): #train_loader\n",
+    "            x, c, w, z = data\n",
+    "            # cuda\n",
+    "            if torch.cuda.is_available():\n",
+    "                x, c, w, z = x.cuda(), c.cuda(), w.cuda(), z.cuda()\n",
+    "            # forward pass\n",
+    "            cp = reg(x)\n",
+    "            if method_name == \"spo+\":\n",
+    "                loss = loss_func(cp, c, w, z)\n",
+    "            elif method_name == \"mse\":\n",
+    "                loss = loss_func(cp, c)\n",
+    "            else:\n",
+    "                raise ValueError(\"Method name {} not supported\".format(method_name))\n",
+    "            # backward pass\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            # record time\n",
+    "            tock = time.time()\n",
+    "            elapsed += tock - tick\n",
+    "            train_loss += loss.item()\n",
+    "        train_loss /= len(train_loader) #training still\n",
+    "        train_loss_log.append(train_loss)\n",
+    "        regret = pyepo.metric.regret(reg, optmodel, val_loader) #regret calculated on val set\n",
+    "        loss_log_regret.append(regret)\n",
+    "        print(\"Epoch {:2},  Loss: {:9.4f},  Regret: {:7.4f}%\".format(epoch+1, train_loss, regret*100))\n",
+    "    print(\"Total Elapsed Time: {:.2f} Sec.\".format(elapsed))\n",
+    "    return train_loss_log, loss_log_regret\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "method_name = \"spo+\"\n",
+    "\n",
+    "# Instantiate the model\n",
+    "loss_log_lstm_spo, loss_log_regret_lstm_spo = trainModel(lstm, loss_func=spop, method_name=method_name)\n"
+   ]
   }
  ],
  "metadata": {
