further considerations and questions

--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -1640,6 +1640,18 @@
     "# Instantiate the model\n",
     "loss_log_lstm_spo, loss_log_regret_lstm_spo = trainModel(lstm, loss_func=spop, method_name=method_name)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###QUESTION FOR HYUNGKI: HOW DO I GET THE PREDICTIONS AFTER THIS. RUN MODEL ON TEST_LOADER\n",
+    "#need to see what weights we decided to assign after the training with NN, which isn't shown in the documentation or lab code\n",
+    "#thoughts: optmodel.solve?\n",
+    "# Then how do I use it to evaluate, just multiply?"
+   ]
   }
  ],
  "metadata": {
