initial predictions code

--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -1650,7 +1650,45 @@
     "###QUESTION FOR HYUNGKI: HOW DO I GET THE PREDICTIONS AFTER THIS. RUN MODEL ON TEST_LOADER\n",
     "#need to see what weights we decided to assign after the training with NN, which isn't shown in the documentation or lab code\n",
     "#thoughts: optmodel.solve?\n",
-    "# Then how do I use it to evaluate, just multiply?"
+    "# Then how do I use it to evaluate, just multiply?\n",
+    "\n",
+    "# Make predictions\n",
+    "predictions = lstm.predict(test_loader)\n",
+    "\n",
+    "average_pred_returns = np.mean(predictions, axis=0)\n",
+    "\n",
+    "# Step 1: Extract Opening Prices\n",
+    "get_prices = pd.read_csv('data/raw_data_yf.csv')\n",
+    "\n",
+    "# Filter the DataFrame for the specified date and select 'Ticker' and 'Open' columns\n",
+    "opening_prices = get_prices[get_prices['Date'] == '2022-01-01'][['Ticker', 'Open']]\n",
+    "\n",
+    "# Step 2: Calculate Allocation\n",
+    "initial_investment = 10000  # Initial investment amount\n",
+    "proposed_weights = predictions  # Proposed weights from optimization\n",
+    "\n",
+    "# Merge the opening prices DataFrame with the ticker weights to ensure alignment\n",
+    "merged_data = pd.merge(opening_prices, pd.DataFrame(ticker_weights_dict.items(), columns=['Ticker', 'Weight']), on='Ticker')\n",
+    "\n",
+    "# Calculate allocation for each asset\n",
+    "merged_data['Allocation'] = (initial_investment * merged_data['Weight']) / merged_data['Open']\n",
+    "\n",
+    "# Step 3:  Evaluate Portfolio Value\n",
+    "# Assuming closing_prices is a DataFrame containing closing prices for each ticker on 12-31-2023\n",
+    "closing_prices = get_prices[get_prices['Date'] == '2023-12-23'][['Ticker', 'Close']]\n",
+    "\n",
+    "# Merge the allocation data with the closing prices\n",
+    "merged_data = pd.merge(merged_data, closing_prices, on='Ticker')\n",
+    "\n",
+    "# Calculate the total value of the portfolio\n",
+    "portfolio_value = (merged_data['Allocation'] * merged_data['Close']).sum()\n",
+    "\n",
+    "# Step 4: Calculate Profit\n",
+    "profit = portfolio_value - initial_investment\n",
+    "\n",
+    "# Step 5: Compare\n",
+    "print(\"Profit/Loss from optimized portfolio:\", profit)\n",
+    "\n"
    ]
   }
  ],
